--- a/src/assets/css/partials/_components.scss
+++ b/src/assets/css/partials/_components.scss
@@ -44,6 +44,7 @@
         width: 100%;
         height: 100%;
         padding: 0 8px;
+        font-size: 14px;
     }
     &:before {
         content: '\e800';
@@ -85,6 +86,7 @@
       }
       button {
         display: flex;
+        font-size: 15px;
         align-items: center;
         max-width: 100%;
         color: #616161;
@@ -145,8 +147,13 @@
                 opacity: 1;
             }
             .c-song__name {
-                font-size: 18px;
+                font-size: 13px;
+                line-height: 150%;
                 text-transform: uppercase;
+                @include susy-breakpoint($breakpoint-sm, $container-sm) {
+                    font-size: 18px;
+                    line-height: 140%;
+                }
             }
         }
     }
